# memrise-scraper

./: .gitignore  .travis.yml  LICENSE  README.md  memrise.py  memrise2tts.py  requirements.txt  setup.cfg  setup.py
memrise_scraper/: __init__.py  memrise.py  memrise2tts.py
