[metadata]
name = Memrise-Scraper
author = Radomirs Cirskis
author-email = nad2000@gmail.com
home-page = https://github.com/nad2000/memrise-scraper
project-urls =
    Source Code = https://github.com/nad2000/memrise-scraper/
license = MIT
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    memrise
    scraping
    scraper
    tts
    audio

[files]
packages =
    memrise_scraper

[entry_points]
console_scripts =
    memrise = memrise_scraper:scrape
    memrise2tts = memrise_scraper:scrape
